--- a/templates/work/monthly.md.erb
+++ b/templates/work/monthly.md.erb
@@ -1,7 +1,7 @@
 ## 📆 Monthly Summary ( <%= @start_date.strftime('%Y-%m-%d') %> … <%= @end_date.strftime('%Y-%m-%d') %> )
 #### Key Deliverables Shipped
 - ______________________________________
-#### Strategic Progress
+#### Strategic Progress (OKRs / KPIs)
 - ______________________________________
 #### Biggest Challenges & Decisions
 - ______________________________________
