chore(templates): Worked diet templates

--- a/templates/diet/day.md.erb
+++ b/templates/diet/day.md.erb
@@ -1,4 +1,4 @@
-### 🍽️ Diet - Daily
+## 🍽️ Diet <%= @date.strftime('%Y-%m-%d') %> (<%= @weekday %>)
 
 - What meals did I eat today?  
 - Approximate calories consumed?  
