--- a/templates/diet/monthly.md.erb
+++ b/templates/diet/monthly.md.erb
@@ -1,5 +1,4 @@
-### ⚖️ Diet - Monthly
-
+## 📆 Monthly Diet Summary ( <%= @start_date.strftime('%Y-%m-%d') %> … <%= @end_date.strftime('%Y-%m-%d') %> )
 - Average calorie intake vs. goal?  
 - Weight change this month?  
 - Did I improve portion control?  
