--- a/templates/diet/weekly.md.erb
+++ b/templates/diet/weekly.md.erb
@@ -1,5 +1,4 @@
-### 🥦 Diet - Weekly
-
+### 📅 Weekly Diet Summary – Week <%= @kw %> / <%= @cwy %> (<%= @monday.strftime('%Y-%m-%d') %> … <%= @sunday.strftime('%Y-%m-%d') %>)
 - Did I stay within my planned calorie range?  
 - How many days did I eat vegetables/fruits?  
 - Any alcohol or sugary drinks?  
